@@ -1,5 +1,9 @@
 2008-10-29  Richard Hult  <richard@imendio.com>
 
+	* src/quartz-style.c: Minor style cleanups.
+
+2008-10-29  Richard Hult  <richard@imendio.com>
+
 	* src/quartz-style.c: (draw_layout): Add missing paramenters for
 	area, widget, etc. Fixes missing clipping of text.
 
